--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,112 +1,142 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    line-height: normal;
-  }
-  
-  
-  
-  .contenedor {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  body {
-    margin: 1rem;
-    background-color: black;
-    color: #00FF00;
-    font-family: 'Courier New', Courier, monospace;
-  }
-  
-  table {
-    margin: 1rem;
-  }
-  
-  th,
-  td {
-    border: 1px solid #00FF00;
-    padding: 10px;
-  }
-  
-  h1 {
-    padding: 1rem;
-  }
-  
-  .botones {
-    display: flex;
-    flex-direction: column;
-    margin: 3rem;
-    padding-right: 10rem;
-  }
-  
-  .botones button {
-    background-color: black;
-    color: #00FF00;
-    font-size: 16px;
-    padding: 10px 20px;
-    border: 1px solid #00FF00;
-    border-radius: 20%;
-    margin-bottom: 10px;
-  }
-  
-  .botones button:hover {
-    background-color: #00FF00;
-    color: black;
-  }
-  
-  form {
-    background-color: black;
-    color: #00FF00;
-    font-size: 18px;
-    border: 1px solid #00FF00;
-    padding: 20px;
-    margin: 0 auto;
-    width: 80%;
-    box-shadow: 0 0 100px rgba(221, 216, 216, 0.2);
-  }
-  
-  label {
-    display: block;
-    margin: 10px;
-    margin-bottom: 5px;
-  }
-  
-  input[type="text"],
-  textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #00FF00;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 20px;
-    background-color: rgb(24, 24, 24);
-    color: white;
-  }
-  
-  button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 10px;
-  }
-  
-  .areaTexto {
-    background-color: rgb(24, 24, 24);
-    color: #00FF00;
-    padding: 10px;
-    width: 300px;
-  }
-  
-  button:hover {
-    background-color: #3e8e41;
-  }
-  
-  .pedidos {
-    margin: 0 auto;
-    padding: 20px;
-    width: 80%;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  line-height: normal;
+}
+
+
+
+.contenedor {
+  display: flex;
+  justify-content: space-between;
+}
+
+body {
+  margin: 1rem;
+  background-color: #CFA6EB;
+  color: #C0392B;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+table {
+  margin: 1rem;
+}
+
+th,
+td {
+  border: 1px solid #C0392B;
+  padding: 10px;
+}
+
+h1 {
+  padding: 1rem;
+}
+
+.botones {
+  display: flex;
+  flex-direction: column;
+  width: 65%;
+}
+
+.botones button {
+  background-color: #A1B57D;
+  color: rgb(31, 31, 31);
+  font-size: 20px;
+  padding: 10px 20px;
+  border: 1px solid #C0392B;
+  border-radius: 20%;
+  margin-bottom: 10px;
+}
+
+.botones button:hover {
+  background-color: #C0392B;
+  color: black;
+}
+
+form {
+  background-color: white;
+  color: #C0392B;
+  font-size: 18px;
+  border: 1px solid #C0392B;
+  padding: 20px;
+  margin: 3rem;
+  height: 80%;
+  box-shadow: 0 0 100px rgba(221, 216, 216, 0.2);
+}
+
+label {
+  display: block;
+  margin: 10px;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #C0392B;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-bottom: 20px;
+  background-color: #A1B57D;
+  color: rgb(31, 31, 31);
+  font-weight: bold;
+}
+
+button {
+  background-color: #A1B57D;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 10px;
+}
+
+.areaTexto {
+  background-color: #A1B57D;
+  color: rgb(31, 31, 31);
+  padding: 10px;
+  width: 300px;
+  font-weight: bolder;
+}
+
+.areaTexto option {
+  font-weight: bolder;
+}
+
+button:hover {
+  background-color: #C0392B
+}
+
+.pedidos {
+  margin: 0 auto;
+  padding: 20px;
+  width: 80%;
+  font-size: 18px;
+}
+
+.contenedor-imagenes {
+  border: solid 4px white;
+  width: 240px;
+  height: auto;
+  overflow: hidden;
+  margin-top: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.imagen-actual {
+  width: 100%;
+}
+
